--- a/src/admin-page/home/home.html
+++ b/src/admin-page/home/home.html
@@ -1,66 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home Admin</title>
-    <link rel="stylesheet" href="./home.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <!-- side bar start -->
-    <div class="sidebar" id="sidebar">
-      <div class="logo">
-        <h2>Welcome,</h2>
-        <p>Rafif Purnomo</p>
-      </div>
-      <ul class="nav-list">
-        <li><a href="./home.html">Dashboard</a></li>
-        <li><a href="./users.html">Users</a></li>
-        <li><a href="./setting.html">Settings</a></li>
-        <li><a href="./report.html">Reports</a></li>
-        <li><a href="#logout">Logout</a></li>
-      </ul>
-    </div>
-    <!-- side bar end -->
-
-    <!-- main content start -->
-    <div class="main-content" id="main-content">
-      <button id="toggle-btn">☰</button>
-      <h1 class="wellcomeTXT">Selamat datang di dashboard admin</h1>
-      <div class="dashboard">
-        <h2>Jumlah Pengguna Aktif</h2>
-        <div class="jumlahUserContainer">
-            <div class="jumlahUser">
-                <h3>jumlah pelamar</h3>
-                <p>30</p>
-            </div>
-            <div class="jumlahHRD">
-                <h3>jumlah HRD</h3>
-                <p>30</p>
-            </div>
-            <div class="jumlahAdmin">
-                <h3>jumlah admin</h3>
-                <p>5</p>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="home.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.0/chart.min.js"></script>
+    <title>Admin Page</title>
+</head>
+<body>
+    <nav class="navbar">
+        <a href="#" class="brand">Admin REKAN PABRIK</a>
+        <div class="nav-container">
+            <div class="nav-links">
+                <a href="user.html" class="nav-item">
+                    User
+                </a>
+                <a href="#" class="nav-item">
+                    Laporan
+                </a>
+                <a href="#" class="nav-item">
+                    Profil
+                </a>
             </div>
         </div>
-        <h2>postingan pekerjaan</h2>
-        <div class="jumlahUserContainer">
-            <div class="jumlahUser">
-                <h3>jumlah postingan pekerjaan</h3>
-                <p>30</p>
+        <div class="logout-container">
+            <a href="#" class="nav-item logout">
+                Logout
+            </a>
+        </div>
+    </nav>
+    <div class="container">
+        <!-- Stats Cards -->
+        <div class="stats-container">
+            <div class="stat-card">
+                <div class="stat-icon following">
+                    <i>👤</i>
+                </div>
+                <div class="stat-info">
+                    <h3>Job Applicant</h3>
+                    <p class="stat-number">80,000</p>
+                </div>
+            </div>
+            
+            <div class="stat-card">
+                <div class="stat-icon saved">
+                    <i>📑</i>
+                </div>
+                <div class="stat-info">
+                    <h3>Saved Job</h3>
+                    <p class="stat-number">112</p>
+                </div>
             </div>
         </div>
-      </div>
-    </div>
-    <!-- main content end -->
 
-    
-    <script src="./home.js"></script>
-  </body>
+        <!-- Chart Section -->
+        <div class="chart-container">
+            <h2>Job Applicant</h2>
+            <canvas id="visitsChart"></canvas>
+        </div>
+    </div>
+    <script src="home.js"></script>
+</body>
 </html>
