--- a/src/admin-page/home/user.html
+++ b/src/admin-page/home/user.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav class="navbar">
-        <a href="#" class="brand">Admin REKAN PABRIK</a>
+        <a href="home.html" class="brand">Admin REKAN PABRIK</a>
         <div class="nav-container">
             <div class="nav-links">
                 <a href="user.html" class="nav-item">
