--- a/src/admin-page/home/home.html
+++ b/src/admin-page/home/home.html
@@ -18,7 +18,7 @@
                 <a href="#" class="nav-item">
                     Laporan
                 </a>
-                <a href="#" class="nav-item">
+                <a href="profile.html" class="nav-item">
                     Profil
                 </a>
             </div>
