--- a/src/home-before-login/contact-us/contactUs.html
+++ b/src/home-before-login/contact-us/contactUs.html
@@ -18,8 +18,8 @@
       <nav class="navbar" id="navbar">
         <a href="/src/home-before-login/home/HomeBFLogin.html">
           <img
-            src="/src/assets/img/logoRekanPabrik.png"
-            alt=""
+            src="/src/public/img/logoRekanPabrik.png"
+            alt="nav logo"
             class="nav-logo"
           />
         </a>
@@ -111,7 +111,7 @@
       </div>
       <div class="gambar">
         <img
-          src="/src/assets/img/logoRekanPabrik.png"
+          src="/src/public/img/logoRekanPabrik.png"
           alt="logo rekan pabrik"
         />
       </div>
