--- a/src/admin/profile/profile.html
+++ b/src/admin/profile/profile.html
@@ -11,13 +11,13 @@
         <a href="#" class="brand">Admin REKAN PABRIK</a>
         <div class="nav-container">
             <div class="nav-links">
-                <a href="user.html" class="nav-item">
+                <a href="../users/user.html" class="nav-item">
                     User
                 </a>
-                <a href="#" class="nav-item">
+                <a href="../home/home.html" class="nav-item">
                     Laporan
                 </a>
-                <a href="profile.html" class="nav-item">
+                <a href="../profile/profile.html" class="nav-item">
                     Profil
                 </a>
             </div>
