--- a/src/admin-page/home/user.html
+++ b/src/admin-page/home/user.html
@@ -15,10 +15,10 @@
                 <a href="user.html" class="nav-item">
                     User
                 </a>
-                <a href="#" class="nav-item">
+                <a href="report.html" class="nav-item">
                     Laporan
                 </a>
-                <a href="#" class="nav-item">
+                <a href="profile.html" class="nav-item">
                     Profil
                 </a>
             </div>
