--- a/src/admin-page/home/home.html
+++ b/src/admin-page/home/home.html
@@ -15,7 +15,7 @@
                 <a href="user.html" class="nav-item">
                     User
                 </a>
-                <a href="#" class="nav-item">
+                <a href="report.html" class="nav-item">
                     Laporan
                 </a>
                 <a href="profile.html" class="nav-item">
