--- a/src/admin-page/home/profile.html
+++ b/src/admin-page/home/profile.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <nav class="navbar">
-        <a href="#" class="brand">Admin REKAN PABRIK</a>
+        <a href="home.html" class="brand">Admin REKAN PABRIK</a>
         <div class="nav-container">
             <div class="nav-links">
                 <a href="user.html" class="nav-item">
                     User
                 </a>
-                <a href="#" class="nav-item">
+                <a href="report.html" class="nav-item">
                     Laporan
                 </a>
                 <a href="profile.html" class="nav-item">
